[package]
name = "cargo-pumpkin"
version = "0.1.0"
edition = "2024"
description = "A Cargo subcommand that building and running the your Pumpkin plugin"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/MagicTeaMC/cargo-pumpkin"

[[bin]]
name = "cargo-pumpkin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
