[package]
name = "cargo-pumpkin"
version = "0.1.1"
edition = "2024"
description = "A Cargo subcommand that building and running your Pumpkin plugin"
authors = ["Maoyue <maoyue@maoyue.tw>"]
license = "MIT"

repository = "https://github.com/MagicTeaMC/cargo-pumpkin"
readme = "README.md"
keywords = ["gamedev", "minecraft"]
categories = ["command-line-utilities"]

[[bin]]
name = "cargo-pumpkin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
